feat: Include LICENSE, README.md, and example config in release archives.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,6 +31,10 @@ builds:
 archives:
   - name_template: >-
       {{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}
+    files:
+      - LICENSE
+      - README.md
+      - .gridlock.example.yaml
     formats:
       - tar.gz
     format_overrides:
